--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
       <artifactId>aws-java-sdk-dynamodb</artifactId>
       <version>1.11.280</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.2</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
